# penzoe

./: .coverage  .envs  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  resetdb.sh  runserver.sh  setup.cfg
.github/workflows/: deploy.yml  test.yml
account/: urls.py  views.py
book/: forms.py  models.py  urls.py  utils.py  views.py
book/migrations/: 0001_initial.py  0002_remove_book_summary.py  0003_book_user.py  0004_auto_20200524_1421.py
book/tests/: .factories.py.swp  factories.py
config/: api_router.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
discourse/: '  forms.py  models.py  urls.py  views.py
discourse/migrations/: 0001_initial.py
penzoe/: asgi.py  local_settings.py  settings.py  test.py  urls.py  wsgi.py
penzoe/book/: utils.py  views.py
penzoe/books/: apps.py  models.py  urls.py  utils.py  views.py
penzoe/core/: apps.py  urls.py
penzoe/discourse/: apps.py  models.py  urls.py  views.py
penzoe/quiz/: apps.py  urls.py  utils.py  views.py
penzoe/settings/: base.py  development.py  production.py
penzoe/users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
penzoe/words/: apps.py  models.py  urls.py  views.py
project/: asgi.py  urls.py  wsgi.py
project/settings/: base.py  development.py
src/penzoe/: asgi.py
templates/: base.html  nav.html
templates/account/: account_inactive.html  (+16 more)
users/: admin.py  forms.py  models.py  urls.py  views.py
(+62 files in other folders)
